--- a/neo4j_loader.ipynb
+++ b/neo4j_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a28fba69",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\maadt\\AppData\\Local\\Temp\\ipykernel_37420\\651748714.py:41: DeprecationWarning: write_transaction has been renamed to execute_write\n",
+      "C:\\Users\\maadt\\AppData\\Local\\Temp\\ipykernel_3636\\2666090052.py:41: DeprecationWarning: write_transaction has been renamed to execute_write\n",
       "  session.write_transaction(insert_triplet, src, rel, tgt)\n"
      ]
     },
@@ -60,8 +60,8 @@
     "      MERGE (a)-[:RELATION {type: $relation}]->(b)\n",
     "    \"\"\"\n",
     "    query = \"\"\"\n",
-    "    MERGE (a:Entity {name: $source})\n",
-    "    MERGE (b:Entity {name: $target})\n",
+    "    MERGE (a:Source {name: $source})\n",
+    "    MERGE (b:Target {name: $target})\n",
     "    MERGE (a)-[:RELATION {type: $relation}]->(b)\n",
     "    \"\"\"\n",
     "    tx.run(query, source=source, relation=relation, target=target)\n",
@@ -105,10 +105,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f7d82ba6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\maadt\\AppData\\Local\\Temp\\ipykernel_3636\\1368597255.py:10: DeprecationWarning: Using a driver after it has been closed is deprecated. Future versions of the driver will raise an error.\n",
+      "  with driver.session() as session:\n"
+     ]
+    }
+   ],
    "source": [
     "def fetch_all_triples():\n",
     "    \"\"\"\n",
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "93db417a",
    "metadata": {},
    "outputs": [],
@@ -160,60 +169,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "25cdc73b",
+   "execution_count": 17,
+   "id": "7c6a55d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 1) On configure openai pour pointer vers Albert\n",
-    "openai.api_key = 'sk-eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjo4NDAyLCJ0b2tlbl9pZCI6MTQ4OSwiZXhwaXJlc19hdCI6MTc4MDM1MTIwMH0.mOB9Cx4U4G7K5gin0twePc_WauAEPtRWQ0UaK6oUs9I'\n",
-    "openai.api_base = \"https://albert.api.etalab.gouv.fr/v1\"\n"
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a3fc45e9",
+   "execution_count": 9,
+   "id": "e24472b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AlbertLLM(LLM, BaseModel):\n",
+    "from mistralai.client import MistralClient\n",
+    "from langchain_core.language_models import LLM\n",
+    "from typing import Optional, List, Mapping, Any\n",
+    "from pydantic import BaseModel, PrivateAttr\n",
+    "import os\n",
+    "\n",
+    "class MistralLangChainLLM(LLM, BaseModel):\n",
     "    \"\"\"\n",
-    "    Wrapper LangChain pour Albert (API OpenAI-compatible).\n",
+    "    Wrapper LangChain-compatible pour le SDK mistralai.\n",
     "    \"\"\"\n",
     "\n",
     "    temperature: float = 0.2\n",
-    "    model_name: str = \"albert-small\"\n",
+    "    model_name: str = \"mistral-small\"\n",
+    "    \n",
+    "    # ✅ Ajout d'attributs privés compatibles Pydantic\n",
+    "    _api_key: str = PrivateAttr()\n",
+    "    _client: MistralClient = PrivateAttr()\n",
     "\n",
-    "    class Config:\n",
-    "        \"\"\"Pour que pydantic accepte les champs supplémentaires (ignorez-les).\"\"\"\n",
-    "        extra = \"ignore\"\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self._api_key = os.getenv(\"MISTRAL_API_KEY\")\n",
+    "        if not self._api_key:\n",
+    "            raise ValueError(\"⚠️ La clé API MISTRAL_API_KEY est manquante dans l’environnement.\")\n",
+    "        self._client = MistralClient(api_key=self._api_key)\n",
     "\n",
     "    def _call(self, prompt: str, stop: Optional[List[str]] = None) -> str:\n",
-    "        \"\"\"\n",
-    "        Envoie le prompt à l’API Albert et renvoie le texte généré.\n",
-    "        \"\"\"\n",
-    "        response = openai.ChatCompletion.create(\n",
+    "        messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "        response = self._client.chat(\n",
     "            model=self.model_name,\n",
-    "            messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "            messages=messages,\n",
     "            temperature=self.temperature,\n",
-    "            stop=stop,\n",
-    "            max_tokens=1024,\n",
     "        )\n",
     "        return response.choices[0].message.content\n",
     "\n",
     "    @property\n",
-    "    def _identifying_params(self) -> Mapping[str, Any]:\n",
-    "        return {\"model_name\": self.model_name, \"temperature\": self.temperature}\n",
+    "    def _llm_type(self) -> str:\n",
+    "        return \"mistral\"\n",
     "\n",
     "    @property\n",
-    "    def _llm_type(self) -> str:\n",
-    "        return \"albert\"\n"
+    "    def _identifying_params(self) -> Mapping[str, Any]:\n",
+    "        return {\n",
+    "            \"model_name\": self.model_name,\n",
+    "            \"temperature\": self.temperature,\n",
+    "        }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a51495e0",
    "metadata": {},
    "outputs": [
@@ -221,9 +252,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\maadt\\AppData\\Local\\Temp\\ipykernel_39392\\3056014003.py:7: DeprecationWarning: Retrievers must implement abstract `_get_relevant_documents` method instead of `get_relevant_documents`\n",
+      "C:\\Users\\maadt\\AppData\\Local\\Temp\\ipykernel_17420\\3120548857.py:8: DeprecationWarning: Retrievers must implement abstract `_get_relevant_documents` method instead of `get_relevant_documents`\n",
       "  class Neo4jRetriever(BaseRetriever):\n",
-      "C:\\Users\\maadt\\AppData\\Local\\Temp\\ipykernel_39392\\3056014003.py:7: DeprecationWarning: Retrievers must implement abstract `_aget_relevant_documents` method instead of `aget_relevant_documents`\n",
+      "C:\\Users\\maadt\\AppData\\Local\\Temp\\ipykernel_17420\\3120548857.py:8: DeprecationWarning: Retrievers must implement abstract `_aget_relevant_documents` method instead of `aget_relevant_documents`\n",
       "  class Neo4jRetriever(BaseRetriever):\n"
      ]
     }
@@ -303,14 +334,13 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'load_dotenv' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mindexes\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvectorstore\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RetrievalQA\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# ----------------------------------------\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# 1. Charger les variables d’environnement\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# ----------------------------------------\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[43mload_dotenv\u001b[49m()\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# ----------------------------------------\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# 2. Instancier le LLM Albert\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# ----------------------------------------\u001b[39;00m\n\u001b[32m     11\u001b[39m llm = AlbertLLM(temperature=\u001b[32m0.2\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'load_dotenv' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Chat GraphRAG (Neo4j + Albert via LangChain) ===\n",
+      "\n",
+      "📝 Réponse :\n",
+      "L'automobile est liée à la mobilité, ce qui signifie qu'elle joue un rôle important dans le domaine des déplacements. Elle est également associée à la France, indiquant que la France a une relation avec l'industrie automobile, que ce soit en termes de production, de consommation ou de réglementation. En outre, l'automobile a également une relation avec la population, ce qui suggère que les voitures sont un moyen de transport important pour les gens. Cependant, ce contexte ne fournit pas d'informations spécifiques sur le fonctionnement, les caractéristiques ou les types d'automobiles.\n"
      ]
     }
    ],
@@ -318,6 +348,7 @@
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.indexes.vectorstore import RetrievalQA\n",
     "import dotenv\n",
+    "from Retr\n",
     "\n",
     "# ----------------------------------------\n",
     "# 1. Charger les variables d’environnement\n",
@@ -327,7 +358,7 @@
     "# ----------------------------------------\n",
     "# 2. Instancier le LLM Albert\n",
     "# ----------------------------------------\n",
-    "llm = AlbertLLM(temperature=0.2)\n",
+    "llm = MistralLangChainLLM(temperature=0.2)\n",
     "\n",
     "# ----------------------------------------\n",
     "# 3. Créer le prompt template pour la QA\n",
@@ -379,7 +410,7 @@
     "        #  1) graph_retriever.get_relevant_documents(question) → liste de Docs\n",
     "        #  2) Concatène “context” = sommaire des docs, plus “question” dans le prompt\n",
     "        #  3) Envoie tout à llm._call(prompt_final) → Albert → génération\n",
-    "        result = qa_chain({\"query\": question})\n",
+    "        result = qa_chain.invoke({\"query\": question})\n",
     "        print(\"\\n📝 Réponse :\")\n",
     "        print(result[\"result\"])"
    ]
